--- a/styles.css
+++ b/styles.css
@@ -90,9 +90,8 @@ ol
 
 #header
 {
-    margin: auto;
     text-align: center;
-    border: 5px solid red;
+    border: 5px solid black;
     width: 60%;
     color: blue;
 }
@@ -100,7 +99,7 @@ ol
 #tableOfContents
 {
     padding: 15px;
-    border: 5px solid red;
+    border: 5px solid black;
     margin-top: 10px;
     width: 15%;
     float: left;
