--- a/styles.css
+++ b/styles.css
@@ -91,6 +91,7 @@ ol
 #header
 {
     text-align: center;
+    margin: 2px 5px 15px 200px;
     border: 5px solid black;
     width: 60%;
     color: blue;
