--- a/styles.css
+++ b/styles.css
@@ -132,19 +132,19 @@ h2 {
 }
 
 .leftSug {
-    display: block;
+    display: inline-block;
     margin-left: 10px;
     width: 30%;
 }
 
 .centerSug {
-    display: block;
+    display: inline-block;
     margin: auto;
     width: 30%;
 }
 
 .rightSug {
-    display: block;
+    display: inline-block;
     margin-right: 10px;
     width: 30%;
 }
